Fixed beFuddled GameEnd generation and checks for full user capacity
Also added commas to output file for beFuddled json

--- a/thghtShre/Makefile
+++ b/thghtShre/Makefile
@@ -1,4 +1,4 @@
 compile:
-	javac -cp ../org.json-20120521.jar thghtShreGen.java
+	javac -cp ./org.json-20120521.jar thghtShreGen.java
 run:
-	java -cp ../org.json-20120521.jar: thghtShreGen out.txt 1000000
+	java -cp ./org.json-20120521.jar: thghtShreGen out.txt 1000000
